# coursework_5

./: README.md  config.py  main.py  pyproject.toml
data/: test_file.json
src/: parsing_hh.py
tests/: conftest.py  test_api_hh.py  test_compare_vacancies.py  test_get_api_hh.py  test_json_saver.py  test_vacancy.py
