[tool.poetry]
name = "vacancy from hh"
version = "0.1"
description = "Get vacancy from Hh"
authors = ["Kris <ssspers92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
